# sqd

./: .gitattributes  .gitleaks.toml  .gitleaksignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  ESP32_S3_SQD_Project_WBS.xlsx  sdkconfig.defaults  sdkconfig.defaults.debug  sdkconfig.defaults.production  sdkconfig.defaults.validation
.github/: CODEOWNERS  pull_request_template.md  release.yml
components/build_metadata/: CMakeLists.txt  sqd_build_metadata.c
components/build_metadata/include/: sqd_build_metadata.h  sqd_build_metadata_generated.h.in
docs/evidence/: README.md
docs/evidence/logs/B2.1/: B2.1_clean_clone_results_20260716_104302.csv  B2.1_clean_clone_results_20260716_114936.csv  B2.1_clean_clone_verification_20260716_104302.txt  B2.1_clean_clone_verification_20260716_114936.txt
docs/evidence/logs/B2.2/: B2.2_governance_initialization_20260717_070112.csv  B2.2_governance_initialization_20260717_070112.txt
docs/evidence/logs/B2.3/: B2.3_binary_metadata_manifest_20260717_142223.json  B2.3_gitleaks_history_20260717_142223.txt  B2.3_initialization_20260717_113955.txt  B2.3_initialization_results_20260717_113955.csv  B2.3_verification_20260717_142223.txt  B2.3_verification_results_20260717_142223.csv
docs/evidence/logs/B3.1/: B3.1_binary_manifest_20260717_153011.csv  (+6 more)
docs/phase-b/: B2.1_Repository_Baseline.md  B2.2_Bootstrap_Exception_Record.md  B2.2_GitHub_Configuration_Checklist.md  B2.2_Governance_Closure_Record.md  B2.2_Source_Control_and_Versioning_Policy.md  B2.3_Acceptance_Record.md  B2.3_Firmware_Metadata_and_Secret_Controls.md  B3.1_Build_Configuration_Profile_Policy.md  B3.1_Profile_Difference_Matrix.md
tools/scripts/: B2.1_Initialize_Repository.ps1  B2.1_Verify_Clean_Clone.ps1  B2.2_Initialize_Governance.ps1  B2.2_Verify_Governance.ps1  B2.3_Initialize_Metadata_Secrets.ps1  B2.3_Inspect_Binary.py  B2.3_Install_Gitleaks.ps1  B2.3_Verify_Metadata_Secrets.ps1  B3.2_Bootstrap.ps1  B3.2_Build.ps1  B3.2_Common.ps1  B3.2_Erase.ps1  B3.2_Flash.ps1  B3.2_HardwareCheck.ps1  B3.2_Monitor.ps1  B3.2_Recovery.ps1  B3.2_Release.ps1  B3.2_Verify.ps1
verification/b2_3_metadata/: CMakeLists.txt  sdkconfig.defaults
verification/b2_3_metadata/main/: CMakeLists.txt  b2_3_metadata_main.c
(+34 files in other folders)
